--- a/package.json
+++ b/package.json
@@ -10,20 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "axios": "^1.8.4",
     "react": "19.0.0",
     "react-native": "0.78.2"
   },
   "devDependencies": {
-    "react": "19.0.0",
-    "react-native": "0.78.2",
-    "react-native-image-picker": "^8.2.0",
-    "@react-navigation/bottom-tabs": "^7.3.7",
-    "@react-navigation/native": "^7.1.3",
-    "@react-navigation/native-stack": "^7.3.7",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.10.0",
-    "react-native-svg": "^15.11.2",
-    "react-native-svg-transformer": "^1.5.0",
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
@@ -34,12 +26,22 @@
     "@react-native/eslint-config": "0.78.1",
     "@react-native/metro-config": "0.78.1",
     "@react-native/typescript-config": "^0.78.1",
+    "@react-navigation/bottom-tabs": "^7.3.7",
+    "@react-navigation/native": "^7.1.3",
+    "@react-navigation/native-stack": "^7.3.7",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react": "19.0.0",
+    "react-native": "0.78.2",
+    "react-native-image-picker": "^8.2.0",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.10.0",
+    "react-native-svg": "^15.11.2",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
@@ -47,4 +49,3 @@
     "node": ">=18"
   }
 }
-
