--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@react-native/metro-config": "0.78.1",
     "@react-native/typescript-config": "^0.78.1",
     "@react-navigation/bottom-tabs": "^7.3.7",
-    "@react-navigation/native": "^7.1.3",
-    "@react-navigation/native-stack": "^7.3.7",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.0.0",
+    "@types/react": "^19.1.2",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
